# mmfuse

./: .gitignore  CHANGE_LOG.md  Commands  DUAL_CAMERA_DEPLOYMENT.md  README.md  Train Commands  __init__.py  _tst_mmfuse.py  arduino_controller.py  config.py  config_modality.py  demo.py  demo_mock_streaming.py  demo_multimodal_fusion.py  gripper_inferencer.py  gripper_model.pth  gripper_train.py  hpc_install.sh  inferencer.py  mmfuse.code-workspace  motionextractor.py  objectdetection.py  output10  predictions-v1.xlsx  pressure_extractor.py  pyproject.toml  requirements.txt  robot_integration_example.py  robotic_arm_controller.py  robotic_feedback_system.py  run_finetune.sh  run_sdata_training.sh  serial_reader.py  standalone_sdata_inference.py  streaming_robot_control.py
competition/: README.md  evaluate.py  extract_trajectories.py  prepare_dataset.py  sample_submission.py
config/: loader.py  sdata_action_config.yaml  sdata_movement_config.yaml  streaming_config.yaml
data_collection/: README.md  capture_config.yaml  capture_demo.py  consent_form.txt  meta_schema.json  safety_checklist.md  trim_audio_to_video.py
dataset/: emg.csv  meta.json  pressure.csv  robot.csv
demo/: demo.py  demo_mock_streaming.py  demo_multimodal_fusion.py
docs/: ARCHITECTURE.md  AUDIO_SPECIFICATION.md  DUAL_CAMERA_CHECKLIST.md  DUAL_CAMERA_IMPLEMENTATION.md  DUAL_CAMERA_SUPPORT.md  GUIDE.md  HPC_SETUP.md  INPUT_SPECIFICATION.md  INSTALLATION.md  MOCK_HARDWARE_TESTING.md  QUICKREF.md  QUICK_HPC_FIX.md  QUICK_START_DUAL_CAMERA.md  SUMMARY.md  TEXT_ENCODER.md  USAGE_GUIDE.md
(+197 files in other folders)
